# positional.rs

./: .drone.yml  .gitignore  .versions.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  catalog-info.yaml
positional/: Cargo.toml
positional/benches/: enum.rs  serde.rs  write_to_file.rs
positional/examples/: enum.rs  file.rs  read_large_file.rs  test.rs  write.rs  write_large_file.rs
positional/src/: error.rs  field.rs  file.rs  lib.rs  parsed_field.rs  row.rs
positional/src/file/: reader.rs
positional/tests/: external_types.rs  filler_is_valid_value.rs  name_clashes.rs  optional_field.rs  parse_row.rs  positional_file.rs  positional_file_with_counter.rs
positional_derive/: Cargo.toml
positional_derive/examples/: test.rs
positional_derive/src/: analyze.rs  codegen.rs  lib.rs  lower.rs  parse.rs
positional_derive/src/analyze/: field.rs  field_alignment.rs  meta.rs  row_attributes.rs  variant.rs
positional_derive/src/codegen/: from_enum.rs  from_struct.rs
positional_derive/src/lower/: from_enum.rs  from_struct.rs
positional_derive/src/struct_impl/: analyze.rs  codegen.rs  lower.rs  mod.rs
positional_derive/src/struct_impl/analyze/: field.rs  field_alignment.rs  meta.rs  row_attributes.rs
positional_derive/src/test/: analyze.rs
positional_derive/tests/ui/: align-empty.rs  align-empty.stderr  enums-with-multiple-named-variants.rs  enums-with-multiple-named-variants.stderr  enums-with-named-variants.rs  enums-with-named-variants.stderr  enums-with-unit-variants.rs  enums-with-unit-variants.stderr  enums-with-wrong-matcher.rs  enums-with-wrong-matcher.stderr  enums-without-matcher.rs  enums-without-matcher.stderr  list-attributes.rs  list-attributes.stderr  path-attributes.rs  path-attributes.stderr  struct-with-anonymous-fields.rs  struct-with-anonymous-fields.stderr  unions.rs  unions.stderr  unit-struct.rs  unit-struct.stderr  wrong-filler-type.rs  wrong-filler-type.stderr
(+8 files in other folders)
