[package]
description = "A library to author/parse positional files"
edition = "2021"
license = "MIT"
name = "positional"
readme = "../README.md"
repository = "https://github.com/primait/positional.rs"
version = "0.4.3"

[[bench]]
harness = false
name = "serde"

[[bench]]
harness = false
name = "write_to_file"

[[bench]]
harness = false
name = "enum"

[dependencies]
itertools = "0.14.0"
pad = "0.1.6"
positional_derive = {version = "=0.4.3", path = "../positional_derive"}
proc-macro2 = "1.0.39"
quote = "1.0"
thiserror = "2.0.9"

[dev-dependencies]
chrono = "0.4.19"
criterion = "0.5.1"
fake = {version = "3.0.0", features = ["derive", "chrono"]}
rand = "0.8"
