[package]
description = "Macros for positional crate"
edition = "2021"
license = "MIT"
name = "positional_derive"
version = "0.4.1"
documentation = "https://docs.rs/positional"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.39"
quote = "1.0"
syn = {version = "2.0.16", features = ["extra-traits", "full"]}
trybuild = "1.0.61"
